HFC-3572 - Fixed "New Order" button was not aligning in Datagrid List Control

--- a/sass/controls/_datagrid.scss
+++ b/sass/controls/_datagrid.scss
@@ -351,6 +351,10 @@ $datagrid-header-short-height: 32px;
       }
     }
 
+    .row-btn {
+      line-height: normal;
+    }
+
     .datagrid-cell-wrapper {
       border: 1px solid transparent;
       display: block;
